WS_INTEGRATION/Sandbox/src/objects/CEOReport_Static_Values__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>CEO Report Static Values</description>
    <fields>
        <fullName>ED_W_1__c</fullName>
        <defaultValue>0.12</defaultValue>
        <label>ED W 1</label>
        <precision>4</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ED_W_2__c</fullName>
        <defaultValue>0.08</defaultValue>
        <label>ED W 2</label>
        <precision>4</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ED_W_3__c</fullName>
        <defaultValue>0.08</defaultValue>
        <label>ED W 3</label>
        <precision>4</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Co_Key_Executive_Visits_To_KU__c</fullName>
        <label>EV # Co Key Executive Visits To KU</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Collaborative_Grants_Awarded__c</fullName>
        <label>EV # Collaborative Grants Awarded</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Company_FTE_Located_In_KU_BTBC__c</fullName>
        <label>EV # Company FTE Located In KU BTBC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Company_FTE_Located_In_Kansas__c</fullName>
        <label>EV # Company FTE Located In Kansas</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Company_FTE_Located_In_Region__c</fullName>
        <label>EV # Company FTE Located In Region</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Company_Reps_On_KUCTC_Board__c</fullName>
        <label>EV # Company Reps On KUCTC Board</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Company_Reps_On_Start_Up_Board__c</fullName>
        <label>EV # Company Reps On Start-Up Board</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Cost_Saving__c</fullName>
        <label>EV $ Cost Saving</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EV_D_Of_Sponsored_Research_Awards__c</fullName>
        <label>EV $ Of Sponsored Research Awards</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EV_For_Capstone_Projects__c</fullName>
        <label>EV $ For Capstone Projects</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EV_From_Equipment_Lease__c</fullName>
        <label>EV $ From Equipment Lease</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EV_Generated_From_Joint_Patents__c</fullName>
        <label>EV $ Generated From Joint Patents</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EV_Generated_From_Licenses__c</fullName>
        <label>EV $ Generated From Licenses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EV_Interviews_On_Campus__c</fullName>
        <label>EV # Interviews On Campus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_KU_Researchers_With_Non_KU_To_CO__c</fullName>
        <label>EV # KU Researchers With Non-KU To CO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_KU_Visits_To_CO_HQ__c</fullName>
        <label>EV # KU Visits To CO HQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_License_Revenue_From_Spin_Off__c</fullName>
        <label>EV $ License Revenue From Spin-Off</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EV_Of_Awarded_Grants__c</fullName>
        <label>EV $ Of Awarded Grants Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EV_Of_Awarded_Grants_received_By_KU__c</fullName>
        <label>EV $ Of Awarded Grants received By KU</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EV_Of_Calls_To_Firm__c</fullName>
        <label>EV # Of Calls To Firm</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Of_Career_Fair_Events__c</fullName>
        <label>EV # Of Career Fair Events</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Of_Citations_For_Published_Research__c</fullName>
        <label>EV # Of Citations For Published Research</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Of_Collaborative_Grands_Applied__c</fullName>
        <label>EV # Of Collaborative Grands Applied</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Of_Collaborative_policy_Changing__c</fullName>
        <label>EV # Of Collaborative policy-Changing</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Of_Courses_With_Firm_Input__c</fullName>
        <label>EV # Of Courses With Firm Input</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Of_Emails_To_Firm__c</fullName>
        <label>EV # Of Emails To Firm</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Of_Executive_Briefings__c</fullName>
        <label>EV # Of Executive Briefings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Of_Firm_Activities_With_Other_U__c</fullName>
        <label>EV # Of Firm Activities With Other U</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Of_Firm_Courses_held__c</fullName>
        <label>EV # Of Firm Courses held</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Of_Firm_Employees_Seeking_Training__c</fullName>
        <label>EV # Of Firm Employees Seeking Training</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Of_Firm_Expert_Visits_To_KU__c</fullName>
        <label>EV # Of Firm Expert Visits To KU</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Of_Gifts_To_KU__c</fullName>
        <label>EV $ Of Gifts To KU</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EV_Of_IT_Vendor_Spending__c</fullName>
        <label>EV $ Of IT Vendor Spending</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EV_Of_Internships__c</fullName>
        <label>EV # Of Internships</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Of_Jobs_Posted__c</fullName>
        <label>EV # Of Jobs Posted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Of_Joint_Invention_Disclosures__c</fullName>
        <label>EV # Of Joint Invention Disclosures</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Of_Joint_PCT_Patents_Filed__c</fullName>
        <label>EV # Of Joint PCT Patents Filed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Of_Joint_Patents_Filed__c</fullName>
        <label>EV # Of Joint Patents Filed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Of_Joint_Patents_Issued__c</fullName>
        <label>EV # Of Joint Patents Issued</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Of_Joint_Supervisors__c</fullName>
        <label>EV # Of Joint Supervisors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Of_KU_Alumni_Serving_On_Firm_Board__c</fullName>
        <label>EV # Of KU Alumni Serving On Firm Board</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Of_KU_Alumni_Working_In_Firm__c</fullName>
        <label>EV # Of KU Alumni Working In Firm</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Of_KU_F_S_Consulting_For_Firm__c</fullName>
        <label>EV # Of KU F&amp;S Consulting For Firm</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Of_KU_F_S_Serving_On_Firm_Board__c</fullName>
        <label>EV # Of KU F&amp;S Serving On Firm Board</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Of_KU_Facilities_Used_By_Firms__c</fullName>
        <label>EV # Of KU Facilities Used By Firms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Of_KU_Researchers_For_Sabbatical__c</fullName>
        <label>EV # Of KU Researchers For Sabbatical</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Of_Key_KU_Alumni__c</fullName>
        <label>EV # Of Key KU Alumni</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Of_Key_Non_Alumni_On_Firm_Board__c</fullName>
        <label>EV # Of Key Non-Alumni On Firm Board</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Of_Licenses_Active__c</fullName>
        <label>EV # Of Licenses Active</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Of_Licenses_Executed__c</fullName>
        <label>EV # Of Licenses Executed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Of_Major_Entities_Collaborating__c</fullName>
        <label>EV # Of Major Entities Collaborating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Of_News_Stories_Of_Firm_KU__c</fullName>
        <label>EV # Of News Stories Of Firm &amp; KU</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Of_Seminars_Given_By_Firm_At_KU__c</fullName>
        <label>EV # Of Seminars Given By Firm At KU</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Of_Service_Agreements__c</fullName>
        <label>EV # Of Service Agreements</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Of_Sponsored_Professorships__c</fullName>
        <label>EV # Of Sponsored Professorships</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Of_Sponsored_Research_Awards__c</fullName>
        <label>EV # Of Sponsored Research Awards</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Of_Times_KU_Equipment_Leased__c</fullName>
        <label>EV # Of Times KU Equipment Leased</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Of_Total_Firm_Employees__c</fullName>
        <label>EV # Of Total Firm Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Of_Workshops__c</fullName>
        <label>EV # Of Workshops</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Raised_From_External_Investment__c</fullName>
        <label>EV $ Raised From External Investment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EV_Raised_From_SBIR_STTR_Grants__c</fullName>
        <label>EV $ Raised From SBIR/STTR Grants</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EV_SBIR_STTR_Grants_Applied__c</fullName>
        <label>EV # SBIR/STTR Grants Applied</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_SBIR_STTR_Grants_Awarded__c</fullName>
        <label>EV # SBIR/STTR Grants Awarded</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_SP__c</fullName>
        <label>EV # Of Sponsored Research Proposals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_of_Joint_PCT_Patents_Issued__c</fullName>
        <label>EV # of Joint PCT Patents Issued</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IT_W_1__c</fullName>
        <defaultValue>0.50</defaultValue>
        <label>IT W 1</label>
        <precision>4</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IT_W_2__c</fullName>
        <defaultValue>0.50</defaultValue>
        <label>IT W 2</label>
        <precision>4</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KT_W_1__c</fullName>
        <defaultValue>0.13</defaultValue>
        <label>KT W 1</label>
        <precision>4</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KT_W_2__c</fullName>
        <defaultValue>0.08</defaultValue>
        <label>KT W 2</label>
        <precision>4</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KT_W_3__c</fullName>
        <defaultValue>0.13</defaultValue>
        <label>KT W 3</label>
        <precision>4</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_W_1__c</fullName>
        <defaultValue>0.11</defaultValue>
        <label>PC W 1</label>
        <precision>4</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_W_2__c</fullName>
        <defaultValue>0.18</defaultValue>
        <label>PC W 2</label>
        <precision>4</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_W_3__c</fullName>
        <defaultValue>0.18</defaultValue>
        <label>PC W 3</label>
        <precision>4</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>R_S_W_1__c</fullName>
        <defaultValue>0.25</defaultValue>
        <label>R&amp;S W 1</label>
        <precision>4</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>R_S_W_2__c</fullName>
        <defaultValue>0.18</defaultValue>
        <label>R&amp;S W 2</label>
        <precision>4</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>R_S_W_3__c</fullName>
        <defaultValue>0.18</defaultValue>
        <label>R&amp;S W 3</label>
        <precision>4</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>CEO Report Static Values</label>
</CustomObject>